	  use `is_equal' directly, but a protected version of it which is preceded
	  by a call to `same_type'.

	Gobo Eiffel Argument Library:

	* Added the possibility to specify a maximum number of options.

	* Added the possibility to make option arguments optional for options
	  that only have a long form.

	* The contracts now certify that the setup of arguments are 
	  unambiguous.

Version 3.6 - 14 June 2007

	gec:

	* Implemented inline agents.

	Gobo Eiffel String Library:

	* Fixed a bug in string formatter where format("$11.9f",941.65899999999817)
	  would return 942.589999910 instead of 941.659000000. Regression tests
	  have been added, and this fix also pointed out a bug in one of the
	  test cases.

	Gobo Eiffel Structure Library:

	* Added iterator features (`do_all', `do_all_with_index', `do_if', 
	  `do_if_with_index', `there_exists') to relevant classes.

	* Fixed bug in invariant of DS_MULTIARRAYED_SPARSE_SET and
	  DS_MULTIARRAYED_SPARSE_TABLE when `capacity' is zero.

	Miscellaneous:

	* Now uses the MIT License, which is an OSI Approved License and
	  a GPL-Compatible Free Software License.

	* Bugs can now be reported on SourceForge bug tracker.

	* Does not support Visual Eifel compiler anymore. Indeed Visual Eiffel
	  does not support Agents, Tuples, INTEGER_64 among other things. The
	  Gobo project tried not to use these constructs so far, but this is
	  becoming too constraining.

Version 3.5 - 23 January 2007

	geant:

	* Fixed bugs which prevented that possible arguments of a target
	  to be taken into account during evaluation of ${somevar} references.
	  This was especially the case for the attributes 'if' and 'unless'.

	* Task <geant> now by default spawns a new geant process if
	  attribute 'file' has been specified. It also has a new attribute
	  called 'fork' to control whether a new process should be spawned
	  or not.

	* Added attribute 'force' to task <xslt>. Use this attribute to