@@ -1,0 +1,7 @@
+This example program shows you how to invoke the XSLT serializer from
+your Eiffel programs.
+
+It is NOT necessary to use the XSLT engine to use this XML serializer.
+
+Documentation on the XSLT serializer is available as part of the XSLT
+library documentation in ${GOBO}/doc/xml/xslt.
