@@ -33,6 +33,10 @@ feature -- Test
 			-- Test 'xslt/serializer' example.
 		do
 			compile_program
+				-- Run example.
+			assert_execute (program_exe + " --omit-xml-declaration=yes " + input_filename + output_log)
+			assert_files_equal ("output_log", input_filename, output_log_filename)
+			assert_integers_equal ("no_error_log", 0, file_system.file_count (error_log_filename))
 		end
 
 feature {NONE} -- Implementation
@@ -42,6 +46,15 @@ feature {NONE} -- Implementation
 		do
 			Result := file_system.nested_pathname ("${GOBO}", <<"example", library_name, "xslt", program_name>>)
 			Result := Execution_environment.interpreted_string (Result)
+		end
+
+	input_filename: STRING is
+			-- Name of input document
+		do
+			Result := file_system.pathname (program_dirname, "doc.xml")
+		ensure
+			input_filename_not_void: Result /= Void
+			input_filename_not_empty: not Result.is_empty
 		end
 
 end
