@@ -37,6 +37,16 @@ Version 3.7 - ?
 	* The contracts now certify that the setup of arguments are 
 	  unambiguous.
 
+	Gobo Eiffel XML library
+
+	* Made the XSLT serializer a reusable component for any XML
+          programs.
+
+	* Added an example of using the XSLT serializer.
+
+	* Added documentation on XML serializers, icluding the
+	reusable XSLT serializer.
+
 Version 3.6 - 14 June 2007
 
 	gec:
